@@ -1,0 +1,105 @@
+#!/usr/bin/python2
+
+from random import choice
+
+faps = [
+	"seisatsu.png",
+	"seisatsu.avi",
+	"Boxxy",
+	"Abasiophilia - People with impaired mobility",
+	"Autoerotic asphixiation - Self-induced asphyxiation, sometimes to the point of near unconsciousness",
+	"Erotic asphyxiation - Asphyxia of oneself or others",
+	"Telephone scatologia - Obscene phone calls, particularly to strangers",
+	"Transvestic fetishism - Cross-dressing / Wearing clothes associated with the opposite sex",
+	"Chremastistophilia - Being robbed or held up",
+	"Splanchnophilia - Entrails",
+	"Hebephilia - Generally early pubescent children",
+	"Sacofricosis - Making a hole in a pocket in order to masturbate unobtrusively in public",
+	"Infantophilia - Pedophilia with a focus on children five years old or younger",
+	"Nasophilia - Noses",
+	"Autassassinophilia - Being in life-threatening situations",
+	"Crush - fetish Squashing of animals, food, or other objects",
+	"Autogynephilia - A biological male imagining himself as a female",
+	"Symphorophilia - Witnessing or staging disasters such as car accidents",
+	"Anililagnia - Attraction by young men to older women",
+	"Stigmatophilia - Body piercings and tattoos",
+	"Salirophilia - Soiling or dirtying others",
+	"Mammaphilia/Breast - fetishism Breasts; also known as mammagynophilia and mastofact",
+	"Autoandrophilia - A biological female imagining herself as a male",
+	"Olfactophilia - Smells",
+	"Formicophilia - Being crawled on by insects",
+	"Narratophilia - Dirty talk Obscene words",
+	"Pedovestism - Dressing like a child",
+	"Mechanophilia - Cars or other machines; also 'mechaphilia'",
+	"Piquerism - Sexual gratification through penetration of another person, most commonly by stabbing or cutting the body with sharp objects",
+	"Exhibitionism - Exposing oneself sexually to others, with or without their consent",
+	"Emetophilia - Vomit",
+	"Mysophilia - Dirtiness, soiled or decaying things",
+	"Pictophilia - Pornography or erotic art, particularly pictures",
+	"Sthenolagnia - Muscle worship Muscles and displays of strength",
+	"Mucophilia - Mucus",
+	"Somnophilia - Sleeping or unconscious people",
+	"Andromimetophilia - Trans men",
+	"Klismaphilia - Enemas",
+	"Masochism - BDSM Suffering; being beaten, bound or otherwise humiliated",
+	"Hybristophilia - Criminals, particularly for cruel or outrageous crimes",
+	"Paraphilic - infantilism Adult baby/Diaper lover (AB/DL) / 'adult baby syndrome'",
+	"Homeovestism - Wearing clothing emblematic of one's own sex",
+	"Pedophilia - Prepubescent children, also spelled paedophilia. Often confused with hebephilia, ephebophilia, and pederasty",
+	"Podophilia - Foot fetish Feet",
+	"Acrotomophilia - Amputee fetish People with amputations",
+	"Liquidophilia - Immersing genitals in liquids",
+	"Navel - fetishism Belly button fetish Sexual attraction to navels - either their own or someone else's",
+	"Sadism - BDSM Inflicting pain on others",
+	"Asphyxiophilia - Asphyxiation or strangulation",
+	"Biastophilia - Rape of an unconsenting person; see also consensual rape fantasy",
+	"Gynemimetophilia - Transwomen Transsexual or transgender women",
+	"Teratophilia - Deformed or monstrous people",
+	"Morphophilia - Particular body shapes or sizes",
+	"Autagonistophilia - Being on stage or on camera",
+	"Forniphilia - Human furniture Turning a human being into a piece of furniture",
+	"Gerontophilia - Elderly people",
+	"Macrophilia - Giants, primarily domination by giant women or men",
+	"Kleptophilia - Stealing; also known as kleptolagnia",
+	"Coprophilia - Scat Feces; also known as scat, scatophilia or fecophilia",
+	"Frotteurism - Rubbing against a non-consenting person",
+	"Chronophilia - Partners of a widely differing chronological age",
+	"Raptophilia - Committing rape, possibly consensual rape fantasy",
+	"Agalmatophilia - Statues, mannequins and immobility",
+	"Peodeiktophilia - Exposing one's penis",
+	"Dacryphilia - Tears or crying",
+	"Apotemnophilia - Having an amputation",
+	"Algolagnia - Pain, particularly involving an erogenous zone",
+	"Lactophilia - Breast milk",
+	"Pyrophilia - Fire",
+	"Pygophilia - Buttocks",
+	"Erotophonophilia - Murder",
+	"Necrophilia - Corpses",
+	"Menophilia - Menstruation",
+	"Sexual - fetishism Nonliving objects",
+	"Partialism - Specific, non-genital body parts",
+	"Dendrophilia - Trees",
+	"Transvestophilia - A transvestite sexual partner",
+	"Trichophilia - Hair",
+	"Troilism - Cuckolding / Cuckoldism",
+	"Urolagnia - Piss play / Urination, particularly in public, on others, and/or being urinated on",
+	"Vampirism - Blood play / Attraction to or involving blood",
+	"Vorarephilia - Vore / The idea of eating or being eaten by others; usually swallowed whole, in one piece",
+	"Voyeurism - Watching others while naked or having sex, generally without their knowledge",
+	"Zoophilia - Animals",
+	"Zoosadism - Bestiality / inflicting pain on or seeing animals in pain",
+	"Boku No Pico",
+	"Ponys",
+	"Cleavage",
+	"Ass",
+	"Buttplugs",
+	"Lesbians",
+	"raldakejla",
+	]
+
+def Fapget(Msg, Sock, Users, Allowed):
+	Sock.say(Msg[3], "\x02{0}\x02 has to fap to \x02{1}\x02!".format(Msg[0], choice(faps)))
+
+hooks = {
+	"^@fapget" : [Fapget, 5, False]
+	}
